# PLY-file-viewer

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Camera.h  Viewer.h  main.cpp
